# ModernCPP_TicTacToe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Game.h  game.h  window.h
src/: CMakeLists.txt  Game.cpp  game.cpp  main.cpp  window.cpp
